fix: overflow on inputs

--- a/process-renderer/styles.css
+++ b/process-renderer/styles.css
@@ -166,6 +166,8 @@ select,
 	border-radius: 3px;
 	margin-top: 2px;
 	margin-bottom: 2px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 input[type="checkbox"] {
